# my-binary-is-thicc-af

./: .gitignore  Cargo.toml  LICENSE  README.md  shell.nix
client/: index.html  main.js  package-lock.json  package.json  style.css
src/: main.rs  symbols.rs
