[package]
name = "my-binary-is-thicc-af"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
object = "0.31.1"
# I may be depending on things one shall not depend on (the output format).
rustc-demangle = { version = "=0.1.23", features = ["std"] }
rustc-hash = "1.1.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"

[profile.release]
debug = 1
